// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip  renders default chip 1`] = `
<div
  className="p-chip"
  role="button"
>
  <span
    className="p-chip__lead"
  />
  <span
    className="p-chip__value"
    dangerouslySetInnerHTML={
      Object {
        "__html": "positive",
      }
    }
  />
</div>
`;

exports[`Chip  renders lead-value chip 1`] = `
<div
  className="p-chip"
  role="button"
>
  <span
    className="p-chip__lead"
  >
    OWNER: 
  </span>
  <span
    className="p-chip__value"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Bob",
      }
    }
  />
</div>
`;
